--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1>Faslsewander_test</h1>
+<h1>Faslsewander</h1>
 
 <p>//////////////////////////////////</p> 
-<img src="https://i1.hdslb.com/bfs/face/3d1d71094d78353d871a04e2be5959d58094708e.jpg@54w_54h_100Q_1c.webp">
+<img src="./src/head.png">
 <p>//////////////////////////////////</p> 
 <img src="./src/1.png">
 </body>
