--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>Faslsewander</h1>
 
 <p>//////////////////////////////////</p> 
-<img src="./src/head.png">
+<img src="./src/head.png" width="256" height="256">
 <p>//////////////////////////////////</p> 
 <img src="./src/1.png">
 </body>
