--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <p>/////////////////////////////////</p> 
 <img src="./src/head.png" width="128" height="128">
 <p>/////////////////////////////////</p> 
-<img src="./src/1.png">
+<img src="./src/ano_1.png">   
 </body>
 </html>
